--- a/pages/blog/blogPost.module.css
+++ b/pages/blog/blogPost.module.css
@@ -1,24 +1,21 @@
 .cover {
-  /* aspect-ratio: 1 / 1; */
-  /* display: flex; */
-  /* flex-direction: column; */
-  display: grid;
-  grid-template: auto auto / 1fr;
-  margin: 5vw auto;
-  /* max-width: 840px; */
-  /* position: relative; */
-  width: 90vw;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 5vw auto 10vw;
+  max-width: 90vw;
 }
 
 .coverImage {
   aspect-ratio: 1 / 1;
-  height: auto;
+  flex: 1;
+  max-width: 500px;
   position: relative;
   width: 100%;
 }
 
 .info {
-  /* background-color: var(--white); */
+  flex: 1;
 }
 
 .title {
@@ -27,7 +24,7 @@
   font-weight: 700;
   padding: 0.5rem 0 0 1rem;
   position: absolute;
-  text-shadow: 0 0 4px black;
+  text-shadow: var(--shadow);
 }
 
 .heading {
@@ -38,26 +35,13 @@
 }
 
 .text p {
-  /* padding-left: 5vw; */
   margin-bottom: 1rem;
 }
 
-/* .text p:last-of-type {
-  margin-bottom: 2rem;
-} */
-
-@media (min-width: 768px) {
+@media (min-width: 1100px) {
   .cover {
-    grid-template: auto / 1fr 1fr;
-    margin: 5vw auto 10vw;
-    /* width: 90vw; */
-  }
-
-  .coverImage {
-    width: 100%;
-  }
-
-  .info {
-    padding-inline: 1rem;
+    align-items: flex-start;
+    flex-direction: row;
+    gap: 2rem;
   }
 }
