responsiveness fixes, part 2

--- a/components/home/collection-card.module.css
+++ b/components/home/collection-card.module.css
@@ -15,7 +15,7 @@
   display: grid;
   grid: 1fr / 1fr;
   height: var(--high);
-  position: relative;
+  /* position: relative; */
   width: 100%;
 }
 
