--- a/pages/all-shoes.module.css
+++ b/pages/all-shoes.module.css
@@ -1,7 +1,5 @@
 .catalogPage {
   display: flex;
-  justify-content: center;
-  max-width: 1440px;
 }
 
 .container {
@@ -24,4 +22,10 @@
 .sorter {
   grid-column: 1/-1;
   margin-left: auto;
+}
+
+@media (min-width: 769px) {
+  .container {
+    margin: 1rem 2rem;
+  }
 }
