--- a/pages/collections/collection.module.css
+++ b/pages/collections/collection.module.css
@@ -1,7 +1,5 @@
 .productPage {
   display: flex;
-  justify-content: center;
-  max-width: 1440px;
 }
 
 .container {
@@ -29,4 +27,10 @@
 .sorter {
   grid-column: 1/-1;
   margin-left: auto;
+}
+
+@media (min-width: 769px) {
+  .container {
+    margin: 1rem 2rem;
+  }
 }
